<resources>
    <string name="app_name">YardDog</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_profile_you">ProfileYou</string>
    <string name="title_activity_profile_dog">ProfileDog</string>
    <string name="title_activity_profile_yard">ProfileYard</string>
    <string name="title_activity_yard">Yard</string>
    <string name="title_activity_find_yard">FindYard</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_request">Request</string>
    <string name="login_text">Login</string>

    <!--Login screen strings-->
    <string name="loginButtonTitle">Login</string>
    <string name="newAccountButtonText">New Account</string>
    <string name="userNameTextHint">User Name</string>
    <string name="passWordText">Password</string>

    <!--Home screen strings-->
    <string name="findAYardButtonText">Find A Yard!</string>
    <string name="profileButtonText">Profile</string>
    <string name="openYardButtonText">Open a Yard!</string>

    <string name="filterTitle">Criteria</string>
    <string name="availability">Availability</string>
    <string name="open">Open Yard</string>
    <string name="editYard">Edit Yard</string>
    <string name="advance">Continue</string>
    <string name="time">Enter a time</string>
    <string name="date">Enter a date</string>
    <string name="dog">Enter a dog</string>
    <string name="from">From: </string>
    <string name="to">To: </string>

    <string name="y.avail">Yard Available?</string>
    <string name="y.start_time">Open:</string>
    <string name="y.start_time.input">(enter time)</string>
    <string name="y.end_time">Close:</string>
    <string name="y.end_time.input">(enter time2)</string>
    <string name="y.description">Enter Description</string>
    <string name="yard_image">Your Yard</string>
    <string name="include">Include your yard?</string>

    <string name="dogSelect">Select a dog: </string>

    <!--Profile Strings-->
    <string name="profile_your_profile">Your Profile</string>
    <string name="profile_your_dogs">Your Dogs</string>
    <string name="profile_your_yard">Your Yard</string>
    <string name="profile_username">Username</string>
    <string name="profile_name_field">User Name: </string>
    <string name="profile_fname_field">First Name: </string>
    <string name="profile_lname_field">Last Name: </string>
    <string name="profile_fusername">First Name</string>
    <string name="profile_lusername">Last Name</string>
    <string name="profile_age">Age: </string>
    <string name="profile_age_field">Age </string>
    <string name="profile_bio">Bio: </string>
    <string name="profile_bio_field">Bio </string>

    <string name="profileyard">default pic</string>
    <string name="include.type">Allow Dog Type:</string>
    <string name="img.edit">+</string>
    <string name="address">Enter Your Address</string>
    <string name="description">Enter Yard Description</string>
    <string name="title_activity_create_profile">CreateProfile</string>

    <string name="create_profile">Create Your Profile</string>
    <string name="create_profile_fname">First Name</string>
    <string name="create_profile_fname_e">Enter First Name: </string>
    <string name="create_profile_lname">Last Name</string>
    <string name="create_profile_lname_e">Enter Last Name: </string>
    <string name="create_profile_email">Email</string>
    <string name="create_profile_email_e">Enter Email: </string>
    <string name="create_profile_pass_e">Enter Password: </string>
    <string name="create_profile_pass">Password</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_profile_dog_view">ProfileDogView</string>

    <string name="your_dog">Your Dogs</string>
    <string name="your_dog_pepper">Pepper</string>
    <string name="your_dog_tobi">Toby</string>
    <string name="your_dog_add">Add New Dog</string>
    <string name="title_activity_create_dog_profile">CreateDogProfile</string>

    <string name="add_dog">Add a New Dog</string>
    <string name="add_dog_name">Enter a name: </string>
    <string name="add_dog_namef">Name </string>
    <string name="add_dog_gender">Enter a gender: </string>
    <string name="add_dog_genderf">Gender </string>
    <string name="add_dog_type">Enter a breed: </string>
    <string name="add_dog_typef">Breed </string>
    <string name="add_dog_size">Enter a size: </string>
    <string name="add_dog_sizef">Size </string>
    <string name="add_dog_bio">Enter a bio: </string>
    <string name="add_dog_biof">Description </string>
    <string name="pepperTitle">Pepper</string>
    <string name="title_activity_profile_dog_view_toby">ProfileDogViewToby</string>
    <string name="tobyTitle">Toby</string>
    <string name="title_activity_other_yard">OtherYard</string>

    <string name="other">Name: Akuang Saechao</string>
    <string name="other_add">Address:</string>
    <string name="other_add3">1113 Kiska Court</string>
    <string name="other_add2">Seaside, CA 93933</string>
    <string name="other_des">Description: Lives with 2 roommates all
        who loves dogs but only takes in small dogs</string>

</resources>
