<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="droidrage.yarddog.create_dog"
    android:background="@color/green">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_dog"
        android:id="@+id/textView22"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/add_dog_name"
        android:id="@+id/textView23"
        android:layout_below="@+id/textView22"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="61dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText24"
        android:layout_below="@+id/textView23"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/add_dog_namef"

        android:background="@drawable/edittextstyle"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:ellipsize="start"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView24"
        android:layout_below="@+id/editText24"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:text="@string/add_dog_type" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText25"
        android:layout_below="@+id/textView24"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/add_dog_typef"

        android:background="@drawable/edittextstyle"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:ellipsize="start"
        android:gravity="center"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/add_dog_gender"
        android:id="@+id/textView25"
        android:layout_below="@+id/editText25"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText26"
        android:layout_below="@+id/textView25"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/add_dog_genderf"

        android:background="@drawable/edittextstyle"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:ellipsize="start"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/add_dog_size"
        android:id="@+id/textView26"
        android:layout_below="@+id/editText26"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText27"
        android:layout_below="@+id/textView26"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/add_dog_sizef"

        android:background="@drawable/edittextstyle"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:ellipsize="start"
        android:gravity="center"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="66dp"
        android:text="@string/advance"
        android:id="@+id/button6"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/red_button"/>
</RelativeLayout>
