<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="droidrage.yarddog.add_dog"
    android:background="@color/green">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tobyTitle"
        android:id="@+id/textView16"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/add_dog_name"
        android:id="@+id/textView17"
        android:layout_below="@+id/textView16"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="7"
        android:id="@+id/editText19"
        android:layout_below="@+id/textView17"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/add_dog_namef"
        android:background="@drawable/edittextstyle"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:ellipsize="start"
        android:gravity="center"
        android:enabled="false"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/add_dog_type"
        android:id="@+id/textView18"
        android:layout_below="@+id/editText19"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="7"
        android:id="@+id/editText20"
        android:layout_below="@+id/textView18"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/add_dog_typef"
        android:background="@drawable/edittextstyle"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:ellipsize="start"
        android:gravity="center"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/add_dog_gender"
        android:id="@+id/textView19"
        android:layout_below="@+id/editText20"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="7"
        android:id="@+id/editText21"
        android:layout_below="@+id/textView19"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:enabled="false"
        android:hint="@string/add_dog_genderf"
        android:background="@drawable/edittextstyle"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:ellipsize="start"
        android:gravity="center"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/add_dog_size"
        android:id="@+id/textView20"
        android:layout_below="@+id/editText21"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="7"
        android:id="@+id/editText22"
        android:layout_below="@+id/textView20"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/add_dog_sizef"
        android:background="@drawable/edittextstyle"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:ellipsize="start"
        android:gravity="center"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/add_dog_bio"
        android:id="@+id/textView21"
        android:layout_below="@+id/editText22"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText23"
        android:layout_below="@+id/textView21"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/add_dog_biof"
        android:paddingTop="10dp"
        android:paddingRight="250dp"
        android:paddingLeft="10dp"
        android:paddingBottom="130dp"
        android:background="@drawable/edittextstyle"
        android:textColor="#000000"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="66dp"
        android:text="@string/confirm"
        android:id="@+id/button5"
        android:background="@drawable/red_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:background="@drawable/tobysmall"
        android:layout_above="@+id/editText22"
        android:layout_alignRight="@+id/editText23"
        android:layout_alignEnd="@+id/editText23" />
</RelativeLayout>
