<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="droidrage.yarddog.ProfileYou"
    android:id="@+id/action_bar"
    android:background="@color/green">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/profile_name_field"
        android:id="@+id/name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="7"
        android:id="@+id/nameField"
        android:layout_below="@+id/name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:ellipsize="start"
        android:gravity="center"
        android:hint="@string/profile_username"
        android:background="@drawable/edittextstyle"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/profile_fname_field"
        android:id="@+id/textView2"
        android:layout_below="@+id/nameField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="7"
        android:id="@+id/editText11"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:ellipsize="start"
        android:gravity="center"
        android:hint="@string/profile_fusername"
        android:background="@drawable/edittextstyle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/profile_lname_field"
        android:id="@+id/textView7"
        android:layout_below="@+id/editText11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="7"
        android:id="@+id/editText12"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"


        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:ellipsize="start"
        android:gravity="center"
        android:hint="@string/profile_lusername"
        android:background="@drawable/edittextstyle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/profile_age"
        android:id="@+id/textView8"
        android:layout_below="@+id/editText12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="7"
        android:id="@+id/editText13"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:ellipsize="start"
        android:gravity="center"
        android:hint="@string/profile_age_field"
        android:background="@drawable/edittextstyle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/profile_bio"
        android:id="@+id/textView9"
        android:layout_below="@+id/editText13"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText14"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp"
        android:paddingRight="250dp"
        android:paddingLeft="10dp"
        android:paddingBottom="230dp"

        android:ellipsize="start"
        android:gravity="center"
        android:hint="@string/profile_bio_field"
        android:background="@drawable/edittextstyle"/>
</RelativeLayout>
